--- a/covid19/src/main/res/values/strings.xml
+++ b/covid19/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="number_of_cases">%1d cases</string>
-    <string name="number_of_deaths">%1d deaths</string>
+    <string name="number_of_cases">%1s cases</string>
+    <string name="number_of_deaths">%1s deaths</string>
 </resources>
