--- a/covid19/src/main/res/values/strings.xml
+++ b/covid19/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="number_of_cases">%1s cases</string>
     <string name="number_of_deaths">%1s deaths</string>
     <string name="number_of_recoveries">%1s recoveries</string>
+    <string name="number_of_critical">%1s critical</string>
     <string name="number_of_countries">%1s countries</string>
     <string name="worldwide_total">Worldwide</string>
 </resources>
